Form handling for Create Journal Async thunk for creating a journal and posting to server Change from BrowserRouter to Route Add custom history to router for handling redirects Some style changes for links to ensure proper text alignment

--- a/public/style.css
+++ b/public/style.css
@@ -86,19 +86,28 @@ label {
 }
 
 .button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	border-radius: 6px;
-	text-align: center;
 	height: 100%;
 	width: 100px;
 	font-family: inherit;
+	font-size: 13.3px;
 	box-sizing: border-box;
 	box-shadow: 0px 0px 1px 1px #1c0527;
 	color: rgb(43, 30, 30);
+	text-decoration: none;
+}
+
+a {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .header .button {
 	background-color: var(--main-header-color);
-	display: inline-block;
 }
 
 .transparent {
@@ -159,7 +168,8 @@ input {
 
 .modal .content {
 	justify-content: center;
-	border: black solid 1px;
+	border: rgb(37, 36, 36) solid 1px;
+	border-radius: 6px;
 	box-shadow: 1px 2px 4px 2px #1c0527;
 	background-color: var(--main-header-color);
 	text-align: center;
